--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
+    <meta name="google-site-verification" content="TEvoHOla5Weg-rZpLH66wkA2KwwpdOTwhytLJRTnb2s" />
 <body>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
