--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="#">Vikash</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://github.com/vikashmehta07/Portfolio">Vikash</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
